# Forge

./: .clang-format  .dockerignore  .gitignore  .yamllint  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_zh.md  build.sh  pyproject.toml  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  docker.yml  lint.yml  release.yml
benchmarks/: bench_backend.py  bench_core.py  bench_inference.py  bench_tokenizer.py
cmake/: detect_cuda_arch.cmake
docs/: architecture.md  architecture_zh.md  build.md  build_zh.md  cli.md  cli_zh.md  dependencies.md  dependencies_zh.md  models.md  models_zh.md  python_api.md  python_api_zh.md
examples/: chat_utils.py  deepseek_r1_inference.py  gemma4_inference.py  minicpmv_cli_inference.py  minicpmv_web_inference.py  qwen3vl_inference.py  qwen_inference.py  tinyllama_inference.py
include/forge/: arch_config_parsers.h  arch_registry.h  arch_weight_inits.h  attention_mask.h  backend.h  backend_scheduler.h  compute_graph.h  context.h  cuda_kernels.h  engine.h  generator.h  gguf_model.h  inference_batch.h  kv_cache.h  logger.h  memory_planner.h  memory_pool.h  model.h  model_config.h  model_loader.h  model_weights.h  ninf_model.h  op_dispatch.h  op_enum.h  operator_activation.h  operator_attention.h  operator_elementwise.h  operator_embedding.h  operator_matmul.h  operator_norm.h  operator_rope.h  operators.h  paged_kv_cache.h  perf_profiler.h  quant_policy.h  quant_traits.h  request_scheduler.h  sampler.h  speculative.h  tensor.h  (+7 more)
include/forge/engines/: deepseek_engine.h  deepseek_graph_builder.h  falcon_engine.h  gemma4_engine.h  gemma_engine.h  generic_engine.h  layer_graph_builder.h  llama_engine.h  llama_graph_builder.h  qwen35_engine.h  qwen35_graph_builder.h  transformer_engine.h
include/nanoinfer/: arch_registry.h  backend.h  backend_scheduler.h  compute_graph.h  context.h  cuda_kernels.h  engine.h  generator.h  gguf_model.h  kv_cache.h  logger.h  memory_planner.h  memory_pool.h  model.h  model_config.h  model_loader.h  model_weights.h  ninf_model.h  op_dispatch.h  op_enum.h  operator_activation.h  operator_attention.h  operator_elementwise.h  operator_embedding.h  operator_matmul.h  operator_norm.h  operator_rope.h  operators.h  paged_kv_cache.h  perf_profiler.h  request_scheduler.h  sampler.h  tensor.h  tokenizer.h  types.h  vision_encoder.h  weight_mapper.h  weight_store.h
include/nanoinfer/engines/: deepseek_engine.h  deepseek_graph_builder.h  falcon_engine.h  gemma_engine.h  layer_graph_builder.h  llama_engine.h  llama_graph_builder.h  qwen35_engine.h  qwen35_graph_builder.h  transformer_engine.h
report/: README.md  base.py  chart.py  qwen.py  runner.py  tinyllama.py
resource/reports/qwen/: results.json
resource/reports/qwen2.5-7b-instruct/: results.json
resource/reports/tinyllama/: results.json
resource/reports/tinyllama-1.1b-chat/: results.json
src/bindings/: backend.cpp  common.h  core_types.cpp  forge_py.cpp  logger.cpp  model.cpp  multimodal.cpp  nanoinfer_py.cpp  profiler.cpp  scheduler.cpp  tokenizer.cpp
src/cli/: cli_args.cpp  cli_chat_template.cpp  cli_common.h  cli_generation.cpp  cli_interactive.cpp  forge_cli.cpp  nanoinfer_cli.cpp
src/core/: backend.cpp  backend_scheduler.cpp  compute_graph.cpp  memory_planner.cpp  memory_pool.cpp  op_dispatch.cpp  op_kernels.cpp  platform.h  tensor.cpp
src/debug/: logger.cpp
src/inference/: attention_mask.cpp  context.cpp  engine_factory.cpp  generator.cpp  kv_cache.cpp  paged_kv_cache.cpp  perf_profiler.cpp  request_scheduler.cpp  sampler.cpp  speculative.cpp
src/inference/engines/: deepseek_engine.cpp  deepseek_graph_builder.cpp  falcon_engine.cpp  gemma4_engine.cpp  gemma_engine.cpp  generic_engine.cpp  layer_graph_builder.cpp  llama_engine.cpp  llama_graph_builder.cpp  qwen35_engine.cpp  qwen35_graph_builder.cpp  transformer_engine.cpp
src/model/: arch_capability.cpp  arch_config_parser.cpp  arch_registrations.cpp  arch_weight_init.cpp  gguf_model.cpp  model.cpp  model_loader.cpp  model_weights.cpp  ninf_model.cpp  quant_policy.cpp  weight_mapper.cpp  weight_store.cpp
src/operators/: CMakeLists.txt  activation.cpp  attention.cpp  cpu_gemv.h  cuda_attention.cu  cuda_common.h  cuda_embedding.cu  cuda_gemm.cu  cuda_gemv.cu  cuda_norm.cu  cuda_quant.cu  dispatch.cpp  dispatch.h  elementwise.cpp  embedding.cpp  matmul.cpp  norm.cpp  rope.cpp
src/operators/cpu/: activation.cpp  attention.cpp  elementwise.cpp  embedding.cpp  fused.h  gemm.h  gemv.h  matmul.cpp  quant_helpers.h  quant_traits.cpp  vec.h
src/operators/cuda/: cuda_activation.cu  cuda_activation.h  cuda_common.h  cuda_elementwise.cu  cuda_elementwise.h  cuda_embedding.cu  cuda_embedding.h  cuda_flash_attn.cu  cuda_flash_attn.h  cuda_fused.cu  cuda_fused.h  cuda_fused_attn.cu  cuda_gemm.cu  cuda_gemv.cu  cuda_gemv.h  cuda_gemv_instances.cu  cuda_gemv_tmpl.cuh  cuda_quant.cu  cuda_quant.h  cuda_rms_norm.cu  cuda_rms_norm.h  cuda_rope.cu  cuda_rope.h
src/tokenizer/: tokenizer.cpp
src/vision/: qwen3vl_encoder.cpp  vision_encoder.cpp  vision_registry.cpp  vit_shared.cpp
tests/: conftest.py  test_advanced_features.py  test_backend.py  test_compute_graph.py  test_engine.py  test_forward.py  test_gguf_gpu.py  test_gpu.py  test_logger.py  test_model.py  test_model_loading.py  test_operators.py  test_scheduler.py  test_tensor.py  test_tinyllama_integration.py  test_tokenizer.py
tests/fixtures/: test_model_small.ninf
tools/: cli_convert.py  cli_create_test.py  convert.py  create_test_model.py  dequant.py  format.py  generate_gemv_instances.py  gguf_reader.py  name_mapping.py
