[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.13.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoinfer"
version = "0.5.0"
description = "Lightweight LLM inference engine with C++/CUDA backend"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]

[tool.setuptools.packages.find]
include = ["nanoinfer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
