[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.13.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0.5.0"
description = "Lightweight LLM inference engine with C++/CUDA backend"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]

[tool.setuptools.packages.find]
include = ["forge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"benchmarks/*" = ["E402", "E501"]
"examples/*" = ["E402", "E501"]
"tests/*" = ["E402", "E501"]
"report/*" = ["E402", "E501"]
"setup.py" = ["E501"]
